[gd_scene load_steps=7 format=3 uid="uid://b6357ppi5j416"]

[ext_resource type="Script" path="res://objs/storage/storage.gd" id="1_3ut1m"]
[ext_resource type="PackedScene" uid="uid://gkwbk3vuur7j" path="res://assets/models/storage/storage/storage.gltf" id="2_85gva"]
[ext_resource type="AudioStream" uid="uid://bdhh8hluat28f" path="res://assets/sounds/put_in_storage.mp3" id="2_rlro3"]
[ext_resource type="AudioStream" uid="uid://wfn4ftlcrn6f" path="res://assets/sounds/take_out_of_storage.mp3" id="3_pfclw"]

[sub_resource type="BoxShape3D" id="BoxShape3D_f3ppr"]

[sub_resource type="BoxShape3D" id="BoxShape3D_cpoff"]
size = Vector3(1.1, 1.5, 2)

[node name="storage" type="StaticBody3D"]
script = ExtResource("1_3ut1m")

[node name="collision" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_f3ppr")

[node name="mesh" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0117102, 0, -0.00387573)

[node name="storage" parent="mesh" instance=ExtResource("2_85gva")]
transform = Transform3D(-3.27835e-08, 0, -0.75, 0, 0.75, 0, 0.75, 0, -3.27835e-08, 0.0117102, 0, 0.00387573)

[node name="resource_spawn" type="Node3D" parent="mesh"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.840142, 0)

[node name="plot_spawn" type="Node3D" parent="mesh"]
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 0, 0.726813, 0)

[node name="area" type="Area3D" parent="."]

[node name="collision" type="CollisionShape3D" parent="area"]
shape = SubResource("BoxShape3D_cpoff")

[node name="audio_store" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("2_rlro3")
unit_size = 3.0

[node name="audio_take" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_pfclw")
unit_size = 3.0

[connection signal="body_entered" from="area" to="." method="_on_area_body_entered"]
[connection signal="body_exited" from="area" to="." method="_on_area_body_exited"]
